# OpenTLDC

./: .gitignore  CMakeLists.txt  Makefile  README  run_TLD.cpp
bbox/: bb_scan.cpp  bbox.h
img/: ImageSource.cpp  ImageSource.h  img.h  img_blur.cpp  img_get.cpp  img_patch.cpp
include/tld/: ImageSource.h  structs.h  tld.h  tldconst.h
mex/: bb_overlap.cpp  distance.cpp  fern.cpp  lk.cpp  mex.h  warp.cpp
tld/: structs.h  tld.cpp  tld.h  tldDetection.cpp  tldDisplay.cpp  tldExample.cpp  tldGenerateNegativeData.cpp  tldGeneratePositiveData.cpp  tldGetPattern.cpp  tldInit.cpp  tldLearning.cpp  tldNN.cpp  tldPatch2Pattern.cpp  tldProcessFrame.cpp  tldReinitBB.cpp  tldSplitNegativeData.cpp  tldTracking.cpp  tldTrainNN.cpp
utils/: mat2img.cpp  utility.h
